# ApplicationDistributionCenter

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: django.yml
.run/: docker_docker-compose.yaml_ Compose Deployment-on-local.run.xml  docker_docker-compose.yaml_ Compose Deployment-on-server.run.xml
ApplicationDistributionCenter/: asgi.py  settings.py  urls.py  wsgi.py
analytics/: admin.py  serializers.py  urls.py  utils.py  views.py
analytics/templates/: index.html
announcements/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
announcements/migrations/: 0001_initial.py  0002_initial.py
articles/: admin.py  apps.py  enums.py  models.py  serializers.py  urls.py  utils.py  views.py
articles/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20240208_0245.py  0004_article_cover.py  0005_alter_article_cover.py  0006_auto_20240302_2157.py  0007_auto_20240302_2200.py  0008_delete_comment.py  0009_rename_visitor_article_user.py
category/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py  0002_category_state.py  0003_alter_category_state.py
category/templates/: category.html
comments/: admin.py  models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_rename_visitor_comment_user.py
commentswitharticles/: admin.py  apps.py  models.py  urls.py  views.py
commentswitharticles/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20240208_0245.py  0004_article_cover.py  0005_alter_article_cover.py  0006_auto_20240302_2157.py  0007_auto_20240302_2200.py
commentswitharticles/templates/: article_details.html
common/: encrypt_schema.py  log_schema.py
components/: urls.py  views.py
components/templates/: home.html
docker/: docker-compose.yaml  entrypoint.sh
error_handler/: views.py
error_handler/templates/: 404.html  500.html
favorites/: admin.py  apps.py  models.py
favorites/migrations/: 0001_initial.py
frontenduser/: admin.py  apps.py  models.py  urls.py  views.py
frontenduser/migrations/: 0001_initial.py  0002_frontenduser_head_icon.py  0003_alter_frontenduser_head_icon.py  0004_frontenduser_role.py  0005_alter_frontenduser_role.py  0006_alter_frontenduser_role.py  0007_frontenduser_nickname.py  0008_frontenduser_state.py  0009_auto_20240306_1247.py  0010_alter_frontenduser_django_user.py  0011_frontenduser_description.py  0012_alter_frontenduser_state.py  0013_alter_frontenduser_django_user.py  0014_frontenduser_user_center_cover.py  0015_alter_frontenduser_user_center_cover.py  0016_recentbrowsing.py
frontenduser/templates/: login&register.html
general/: common_compute.py  common_exceptions.py  common_serializer_fields.py  data_handler.py  encrypt.py  init_cache.py  serializers.py
personal_components/: append_middleware.py
questions/: admin.py  apps.py  models.py  urls.py  views.py
questions/migrations/: 0001_initial.py  0002_alter_answer_content.py  0003_answer_created_time.py  0004_rename_question_state_questions_state.py  0005_auto_20240317_2016.py  0006_rename_init_questions_questions_question.py  0007_alter_answer_respondent.py  0008_answer_is_adopt.py
questions/templates/: question.html  question_list.html
software/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
software/migrations/: 0001_initial.py  0002_auto_20240208_0245.py  0003_auto_20240210_0427.py  0004_alter_software_state.py  0005_alter_software_state.py  0006_rename_visitor_software_user.py
templates/front/: base.html  header-nav.html  publish_article.html  publish_software.html  software_details.html
testunit/: apps.py  tests.py  views.py
utils/: fields_filter.py  logger.py
visitor/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
visitor/migrations/: 0001_initial.py  0002_visitor_head_icon.py  0003_alter_visitor_head_icon.py  0004_visitor_role.py  0005_alter_visitor_role.py  0006_alter_visitor_role.py  (+11 more)
(+6 files in other folders)
