[tool.poetry]
name = "ApplicationDistributionCenter"
version = "0.1.0"
description = ""
authors = ["VincentAdamNemessis <vincentadamnemessis@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode=false

[virtualenvs]
create=true
in-project=true

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
pymysql = "^1.1.1"
django-simpleui = "^2024.10.25"
django-router = "^1.0.8"
django-redis = "^5.4.0"
scikit-learn = "^1.5.2"
markdown = "^3.7"
cryptography = "^43.0.3"
pycryptodome = "^3.21.0"
comtypes = "^1.4.8"
pillow = "^11.0.0"
redis = "^5.2.0"
jieba = "^0.42.1"
pyecharts = "^2.0.7"
django-import-export = "^4.2.0"
bs4 = "^0.0.2"
django-environ = "^0.11.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
